connecting html & css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         </title>
 
-        <link type="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
