--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         </header>
 
         <main>
-            
+            <div class="">
+                <p> I really only made this so I can show my homies </p>   
+            </div>
         </main>
 
         <footer>
