--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <main>
             <div class="">
-                <p> I really only made this so I can show my homies </p>   
+                <p> Just a paragraph lol </p>   
             </div>
         </main>
 
